test/typechecker.d/invalid/ass4.surc.bad
n = 5

f(x: Integer): Integer = fndo
	b: Bool = true
	i = b
	return i
